# NLP_Thesis

./: .gitignore  AGENTS.md  FUNCTION_INDEX.md  README.md  SUBMISSION_README.md  analyze_failures.py  build_dag.py  extract_ast.py  extract_pdf.py  extract_regexes.py  extraction_fast_optimization.patch  full_change.patch  full_data_run.lnk  generate_phase2.py  lm2011_data_paths_and_sample_item_directory.md  mkdocs.yml  pyproject.toml  pytest_out.txt  regex_documentation.md  run_diagnostics.py  run_filing_text.py  run_impossible_by_regime_diagnostics.py  run_item_regime_benchmark.py  run_item_regime_comparison_v3.py  run_suspicious_boundary_diagnostics.py  run_suspicious_boundary_regression_v5.py  scaffold_docs.py  setup.py  suspicious_root_causes_examples.txt  thesis_main.tex
docs/: docstring_audit_report.md  index.md
tests/: conftest.py  test_10q_part_inference_v2.py  test_10q_part_keys.py  test_build_ccm_permno_sample.py  test_canonical_links.py  test_ccm_pipeline.py  test_cleaning.py  test_embedded_heading_verifier.py  test_expected_part_for_item.py  test_extraction_fast_dispatch.py  test_extraction_fuzz.py  test_extraction_logic.py  test_filing_text.py  test_finbert_benchmark_dataset.py  test_finbert_benchmark_runner.py  test_finbert_benchmark_sweep.py  test_finbert_bucket_length_tuning.py  test_finbert_item_analysis.py  test_finbert_notebooks.py  test_finbert_secondary_outcome_tool.py  test_finbert_sentence_confusion_review.py  test_finbert_sentence_dataset.py  test_finbert_sentence_examples.py  test_finbert_sentence_length_visualization.py  test_finbert_staged_inference.py  test_finbert_tail_features.py  test_finbert_tokenization.py  test_gij_and_stubs.py  test_html_audit_multiform.py  test_html_audit_output.py  test_item7_lm_floor_sweep.py  test_item_breakdown_report.py  test_item_text_cleaning.py  test_lm2011_ccm.py  test_lm2011_cleaning.py  test_lm2011_dictionary.py  test_lm2011_extension.py  test_lm2011_finbert_robustness_runner.py  test_lm2011_phase0_validation_audit.py  test_lm2011_pipeline.py  (+34 more)
thesis_assets/: README.md  __init__.py  api.py  bootstrap.py  errors.py  specs.py  submission_lock.py  usage.py
tools/: Load_convert_Data_final.ipynb  analyze_item7_lm_floor_sweep.py  analyze_refinitiv_lookup_basis.py  assess_sentence_split_quality.py  audit_lm2011_pre_refinitiv_thinness.py  build_ccm_permno_sample.py  build_finbert_benchmark_dataset.py  build_finbert_sentence_confusion_review.py  build_linkdata_samples.py  build_multisurface_finbert_audit_pack.py  build_thesis_assets.py  compare_pipeline_runs.py  docs_check.py  docs_pipeline.py  docs_trace.py  (+14 more)
(+201 files in other folders)
