[project]
name = "thesis_pkg"  # pip-name; keep lowercase, `-` allowed, no spaces
version = "0.1.0"
description = "Tools for SEC filings, CRSP/Compustat merges, and diagnostics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "polars>=1.0.0",
  "pandas",
  "pyarrow",
  # add others you actually use
]

[project.optional-dependencies]
dev = [
  "pytest",
]
cython = [
  "Cython>=3.0",
]

[build-system]
requires = ["setuptools>=61", "Cython>=3.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"thesis_pkg.core.sec" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
