[project]
name = "thesis_pkg"  # pip-name; keep lowercase, `-` allowed, no spaces
version = "0.1.0"
description = "Tools for SEC filings, CRSP/Compustat merges, and diagnostics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "polars>=1.0.0",
  "pandas",
  "pyarrow",
  # add others you actually use
]

[project.optional-dependencies]
dev = [
  "pytest",
  "PyYAML",
]
docs = [
  "mkdocs>=1.6,<2.0",
  "mkdocs-material>=9.7,<10.0",
  "mkdocs-mermaid2-plugin>=1.2,<2.0",
  "mkdocstrings[python]>=1.0,<2.0",
  "pymdown-extensions>=10.0",
  "PyYAML",
]
cython = [
  "Cython>=3.0",
]

[build-system]
requires = ["setuptools>=61", "Cython>=3.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"thesis_pkg.core.sec" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
